footer overlapping issue fix

--- a/login.css
+++ b/login.css
@@ -157,7 +157,6 @@ header nav .login .fa-circle-user {
 main {
   width: 100%;
   max-width: 1440px;
-  height: auto;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -328,27 +327,22 @@ label {
 }
 
 footer {
-  width: 100%;
-  min-height: 120px;
-  padding-block: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  backdrop-filter: blur(10px);
-  position: fixed;
-  bottom: 0;
-  font-size: 16px;
-  font-family: ElmSans;
-  color: white;
-  z-index: 996;
+    width: 100%;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    background-color: #0D243B;
+    font-size: 16px;
+    font-family: ElmSans;
 }
 
 footer .footerul {
-  list-style: none;
-  display: flex;
-  gap: 30px;
+    list-style: none;
+    display: flex;
+    gap: 30px;
 }
 
 @media (max-width: 1100px) {
@@ -407,22 +401,30 @@ footer .footerul {
     width: 90%;
     max-width: 400px;
   }
+
   .inputform {
     width: 100%;
   }
+
   #email,
   #pass {
     width: 100%;
   }
+
   .checking {
     width: 100%;
   }
-  footer .footerul {
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
-    text-align: center;
-  }
+
+   footer {
+        height: auto;
+        padding-block: 25px;
+    }
+
+    footer .footerul {
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+    }
 }
 
 @media (min-width: 501px) and (max-width: 600px) {
@@ -514,18 +516,6 @@ footer .footerul {
   .register {
     font-size: 14px;
     margin-top: 20px;
-    text-align: center;
-  }
-
-  footer {
-    padding-block: 20px;
-  }
-
-  footer .footerul {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
     text-align: center;
   }
 }
